welcome.lessons.welcome.array.island.Island.scala.error
island:5: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Byte)Int
match expected type ?
  	if (num(i) + 1 = num(i + 1))
                   ^island:6: error: not found: value nbMonteees
  		nbMontees = nbMonteees + 1
                            ^